docs: Wigner 1931/1993 citation correction and historical accuracy update

--- a/papers/paper/su2-3nj-unified-representations.bib
+++ b/papers/paper/su2-3nj-unified-representations.bib
@@ -185,3 +185,16 @@
   year = 1962,
   annotation = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@incollection{wigner1993,
+  title = {On the Matrices Which Reduce the Kronecker Products of Representations of S. R. Groups},
+  booktitle = {The Collected Works of Eugene Paul Wigner},
+  author = {Wigner, Eugene P.},
+  editor = {Wightman, A. S.},
+  year = {1993},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+  pages = {608--654},
+  doi = {10.1007/978-3-662-02781-3_41},
+  note = {Originally written in 1940 (Princeton University), formalized 3j symbol notation}
+}
