docs: Add Labarthe 1975 article and remove Wigner 1993 incollection reference

--- a/papers/paper/su2-3nj-unified-representations.bib
+++ b/papers/paper/su2-3nj-unified-representations.bib
@@ -35,6 +35,18 @@
   doi = {10.1137/15M1021908}
 }
 
+@article{labarthe1975,
+  title = {Generating Functions for the Coupling-Recoupling Coefficients of {{SU}}(2)},
+  author = {Labarthe, J.-J.},
+  year = 1975,
+  month = oct,
+  journal = {Journal of Physics A: Mathematical and General},
+  volume = {8},
+  number = {10},
+  pages = {1543},
+  doi = {10.1088/0305-4470/8/10/010}
+}
+
 @article{luscombe1998,
   title = {Simplified Recursive Algorithm for {{Wigner}} 3j and 6j Symbols},
   author = {Luscombe, James H. and Luban, Marshall},
@@ -184,17 +196,4 @@
   author = {Yutsis, Adolfas P. and Levinson, I. B. and Vanagas, V. V.},
   year = 1962,
   annotation = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@incollection{wigner1993,
-  title = {On the Matrices Which Reduce the Kronecker Products of Representations of S. R. Groups},
-  booktitle = {The Collected Works of Eugene Paul Wigner},
-  author = {Wigner, Eugene P.},
-  editor = {Wightman, A. S.},
-  year = {1993},
-  publisher = {Springer-Verlag},
-  address = {Berlin, Heidelberg},
-  pages = {608--654},
-  doi = {10.1007/978-3-662-02781-3_41},
-  note = {Originally written in 1940 (Princeton University), formalized 3j symbol notation}
 }
