docs: Add Bitencourt 2014 article to bibliography

--- a/papers/paper/su2-3nj-unified-representations.bib
+++ b/papers/paper/su2-3nj-unified-representations.bib
@@ -1,3 +1,14 @@
+@article{bitencourt2014,
+  title = {The Screen Representation of Vector Coupling Coefficients or {{Wigner}} 3j Symbols: Exact Computation and Illustration of the Asymptotic Behavior},
+  shorttitle = {The Screen Representation of Vector Coupling Coefficients or {{Wigner}} 3j Symbols},
+  author = {Bitencourt, Ana Carla P. and Ragni, Mirco and Littlejohn, Robert G. and Anderson, Roger and Aquilanti, Vincenzo},
+  year = 2014,
+  publisher = {arXiv},
+  doi = {10.48550/ARXIV.1409.8205},
+  urldate = {2026-02-01},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 @article{depietri1996,
   title = {Geometry Eigenvalues and the Scalar Product from Recoupling Theory in Loop Quantum Gravity},
   author = {De Pietri, Roberto and Rovelli, Carlo},
